infra/cloudwatch-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudwatch-exporter
  namespace: monitoring
  labels:
    app: cloudwatch-exporter
spec:
  selector:
    app: cloudwatch-exporter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9404
